exercise done with modal

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 		<div id="tags"></div>
 		<!-- Aqui can los post de pinterest -->
 	</section>
+	<section class="modal" >
+		<h3>Proyecto</h3>
+		<div class="imagen">
+			<!--<a href="" id="atrasarModal">&#60;</a>-->
+			<img id="image" src="">
+			<!--<a href="" id="adelantarModal">></a>-->
+			<a class="cerrar" href="">x</a>
+		</div>
+	</section>
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<script src="./dist/bundle.js"></script>
 </body>
