--- a/index.html
+++ b/index.html
@@ -15,69 +15,14 @@
 			  <i class="fa fa-circle fa-stack-2x"></i>
 			  <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a>
 			</li>
-			<li class="input-caja">
-				<div class="caja-lupa">
-					<i class="fa fa-search" aria-hidden="true"></i>
-					<input type="text" placeholder="javascript">
-					<i class="fa fa-times" aria-hidden="true"></i>
-				</div>
-				<div class="caja-pins">
-					<span>All Pins <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
-				</div>
-			</li>
-			<li><a href="#"><span class="fa-stack fa-lg">
-			  <i class="fa fa-circle fa-stack-2x white"></i>
-			  <i class="fa fa-user fa-stack-1x"></i></span></a>
-			</li>
-			<li><a href="#"><span class="fa-stack fa-lg">
-			  <i class="fa fa-circle fa-stack-2x white"></i>
-			  <i class="fa fa-bars fa-stack-1x"></i></span></a>
-			</li>
-			<li><a href="#"><span class="fa-stack fa-lg">
-			  <i class="fa fa-circle fa-stack-2x white"></i>
-			  <i class="fa fa-commenting fa-stack-1x"></i></span></a>
-			</li>
-		</ul>
-		<ul class="sub-menu">
-			<div class="botones botones-1">
-				<p class="light">Cheat Sheet</p>
-			</div>
-			<div class="botones botones-2">
-				<p>Tutorial</p>
-			</div>
-			<div class="botones botones-3">
-				<p class="light">Code</p>
-			</div>
-			<div class="botones botones-4">
-				<p>Fun</p>
-			</div>
-			<div class="botones botones-5">
-				<p class="light">Programming</p>
-			</div>
-			<div class="botones botones-6">
-				<p>Projects</p>
-			</div>
-			<div class="botones botones-7">
-				<p class="light">Posts</p>
-			</div>
-			<div class="botones botones-8">
-				<p>Medium</p>
-			</div>
-			<div class="botones botones-9">
-				<p class="light">Videos</p>
-			</div>
 		</ul>
 	</header>
 
 	<section id="imagenes" class="imagenes">
+		<div id="busqueda"></div>
+		<div id="tags"></div>
 		<!-- Aqui can los post de pinterest -->
 	</section>
-<!--
-	<div class="loading">
-		<i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-		<span class="sr-only">Loading...</span>
-	</div> -->
-
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<script src="./dist/bundle.js"></script>
 </body>
