se muestran las imagenes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
 		</ul>
 	</header>
 
-	<section id="imagenes" class="imagenes">
+	<section id="imagenes" class="imagenes container">
 		<div id="busqueda"></div>
 		<div id="tags"></div>
 		<!-- Aqui can los post de pinterest -->
+		<div class="row" id="img">
+			
+	
+		</div>
+
 	</section>
+
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<script src="./dist/bundle.js"></script>
 </body>
