--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Pinterest</title>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="css/main.css">
 	<!-- <link rel="stylesheet" href="./css/style.min.css"> -->
 </head>
 <body>
@@ -15,6 +16,7 @@
 			  <i class="fa fa-circle fa-stack-2x"></i>
 			  <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a>
 			</li>
+
 		</ul>
 	</header>
 
@@ -23,6 +25,7 @@
 		<div id="tags"></div>
 		<!-- Aqui can los post de pinterest -->
 	</section>
+
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<script src="./dist/bundle.js"></script>
 </body>
