--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 		</ul>
 	</header>
 
-	<section id="imagenes" class="imagenes">
+	<section id="imagenes" class="imagenes body">
 		<div id="busqueda"></div>
 		<div id="tags"></div>
-		<!-- Aqui can los post de pinterest -->
+		<!-- Aqui van los post de pinterest -->
 	</section>
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<script src="./dist/bundle.js"></script>
+	<footer>
+	</footer>
 </body>
 </html>
