--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
 	<section id="imagenes" class="imagenes">
 		<div id="busqueda"></div>
 		<div id="tags"></div>
-		<!-- Aqui can los post de pinterest -->
+		<!-- Aqui van los post de pinterest -->
+
+		<div id="container">
+		   
+    </div>
 	</section>
+
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<script src="./dist/bundle.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js"></script>
+	<script src="jquery.masonry.min.js"></script>
 </body>
 </html>
