--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Pinterest</title>
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="./css/style.min.css"> -->
-</head>
 <body>
 	<header>
 		<ul class="a-menu">
@@ -22,8 +14,14 @@
 		<div id="busqueda"></div>
 		<div id="tags"></div>
 		<!-- Aqui can los post de pinterest -->
+    <section class="containerPosts">
+      <section id="modal" class="oculto">
+        <span id="close">&times;</span>
+        <section class="imagenModal"></section>
+      </section>
+      <section class="postsImg"></section>
+    </section>
 	</section>
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
-	<script src="./dist/bundle.js"></script>
 </body>
 </html>
