exercise finish without extra points

--- a/index.html
+++ b/index.html
@@ -4,26 +4,70 @@
 	<meta charset="UTF-8">
 	<title>Pinterest</title>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+	<style>
+		body {
+			background-color: #E8E7E3;
+		}
+		.responsive {
+			width: 100%;
+		}
+		.author {
+			color: #E8E7E3;
+		}
+		.mt-2 {
+			margin-top: 1rem
+		}
+		.card {
+			border: 1.5rem solid rgba(0, 0, 0, 0.125) !important;
+			cursor: pointer;
+			border-radius: 0 !important;
+		}
+
+		.card-body:hover {
+			transform: scale(1.01);
+			display: block;
+		}
+		.card-body {
+			padding: 1rem 0 !important;
+		}
+		.container-pins {
+			padding: 1rem;
+		}
+		.modal-body {
+			margin: 5rem;
+		}
+
+	</style>
 	<!-- <link rel="stylesheet" href="./css/style.min.css"> -->
 </head>
 <body>
-	<header>
-		<ul class="a-menu">
-			<!--  <li><a class="red" href="#"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a></li> -->
-
-			<li><a href="#" class="red"><span class="fa-stack fa-lg">
-			  <i class="fa fa-circle fa-stack-2x"></i>
-			  <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a>
-			</li>
-		</ul>
-	</header>
-
-	<section id="imagenes" class="imagenes">
-		<div id="busqueda"></div>
-		<div id="tags"></div>
-		<!-- Aqui can los post de pinterest -->
+	<section class="row container-pins">
+		
 	</section>
+
+	<section id="modal">
+		<div class="modal fade" id="myModal" role="dialog">
+		    <div class="modal-dialog modal-lg">
+		      <div class="modal-content">
+		        <div class="modal-header">
+		          <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        </div>
+		        <div class="modal-body">
+		        	
+		        </div>
+		        <div class="modal-footer">
+		          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+		        </div>
+		      </div>
+		    </div>
+		</div>
+
+	</section>
+
+
+
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<script src="./dist/bundle.js"></script>
+
 </body>
 </html>
