--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
 		<!-- Aqui van los post de pinterest -->
 
 		<div id="container">
-		   
+
     </div>
+
+		<!-- Modal -->
+
+		<div id="modal-img" class="modal" tabindex="-1" role="dialog"></div>
+
 	</section>
 
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
