--- a/index.html
+++ b/index.html
@@ -8,14 +8,42 @@
 </head>
 <body>
 	<header>
-		<ul class="a-menu">
-			<!--  <li><a class="red" href="#"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a></li> -->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="#">
+			  	<img src="pinterest.png" width="30" height="30" class="d-inline-block align-top" alt="Pinterest">
+			  </a>
 
-			<li><a href="#" class="red"><span class="fa-stack fa-lg">
-			  <i class="fa fa-circle fa-stack-2x"></i>
-			  <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a>
-			</li>
-		</ul>
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="What do you want to try?" aria-label="Search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
+
+			    <ul class="navbar-nav mr-auto">
+			      <li class="nav-item active">
+			        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Explore</a>
+			      </li>
+						<li class="nav-item ">
+			        <a class="nav-link" href="#">User</a>
+			      </li>
+			      <li class="nav-item dropdown">
+			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			          ...
+			        </a>
+			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			          <a class="dropdown-item" href="#">Settings</a>
+								<div class="dropdown-divider"></div>
+			          <a class="dropdown-item" href="#">Help Center</a>
+								<a class="dropdown-item" href="#">Switch to Business</a>
+								<a class="dropdown-item" href="#">Terms & Privacy</a>
+								<div class="dropdown-divider"></div>
+			          <a class="dropdown-item" href="#">Log Out</a>
+			        </div>
+			      </li>
+			    </ul>
+			</nav>
 	</header>
 
 	<section id="imagenes" class="imagenes">
